parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    CTES

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOL programab
Rule 2     programab -> vars funcion programac
Rule 3     programab -> programac
Rule 4     programac -> PRINCIPAL LPAREN RPAREN bloque
Rule 5     id -> ID
Rule 6     id -> ID LBRACK NUMBER RBRACK
Rule 7     tipovar -> INT
Rule 8     tipovar -> FLOAT
Rule 9     tipovar -> CHAR
Rule 10    tipofun -> INT
Rule 11    tipofun -> FLOAT
Rule 12    tipofun -> CHAR
Rule 13    tipofun -> VOID
Rule 14    vars -> VAR varsb
Rule 15    varsb -> tipovar varsc
Rule 16    varsb -> empty
Rule 17    varsc -> id COMMA varsc
Rule 18    varsc -> id SEMICOL varsb
Rule 19    varsc -> empty
Rule 20    varsfunc -> tipovar varsfuncb
Rule 21    varsfuncb -> id COMMA varsfuncb
Rule 22    varsfuncb -> id
Rule 23    funcion -> FUNCION ID LPAREN funcionb
Rule 24    funcion -> FUNCION tipofun ID LPAREN funcionb
Rule 25    funcion -> empty
Rule 26    funcionb -> RPAREN funcionc
Rule 27    funcionb -> varsfunc RPAREN funcionc
Rule 28    funcionc -> vars bloque funcion
Rule 29    funcionc -> bloque funcion
Rule 30    funcionc -> empty
Rule 31    bloque -> LBRACKET estatuto bloqueb
Rule 32    bloque -> LBRACKET RBRACKET
Rule 33    bloqueb -> RBRACKET
Rule 34    bloqueb -> estatuto bloqueb
Rule 35    asign -> LBRACK expresion RBRACK
Rule 36    asign -> LBRACK CTEI RBRACK
Rule 37    asign -> LBRACK CTEC RBRACK
Rule 38    asignacion -> ID EQUAL asignacionb
Rule 39    asignacion -> ID asign EQUAL asignacionb
Rule 40    asignacionb -> expresion SEMICOL
Rule 41    asignacionb -> ID asign SEMICOL
Rule 42    retorno -> REGRESA LPAREN expresion RPAREN SEMICOL
Rule 43    funcionvoid -> ID LPAREN expresion RPAREN SEMICOL
Rule 44    lee -> LEE LPAREN id leeb
Rule 45    leeb -> RPAREN SEMICOL
Rule 46    leeb -> COMMA id leeb
Rule 47    escritura -> ESCRIBE LPAREN expresion escriturab
Rule 48    escritura -> ESCRIBE LPAREN STRING escriturab
Rule 49    escriturab -> COMMA STRING escriturab
Rule 50    escriturab -> COMMA expresion escriturab
Rule 51    escriturab -> RPAREN SEMICOL
Rule 52    decision -> SI LPAREN expresion RPAREN ENTONCES decisionb
Rule 53    decisionb -> bloque
Rule 54    decisionb -> bloque SINO bloque
Rule 55    repeticioncond -> MIENTRAS LPAREN expresion RPAREN HAZ bloque
Rule 56    repeticionnocond -> DESDE id EQUAL exp HASTA exp HACER bloque
Rule 57    cte -> ID
Rule 58    cte -> NUMBER
Rule 59    cte -> CTEF
Rule 60    cte -> CTEC
Rule 61    cte -> STRING
Rule 62    expresion -> exp
Rule 63    expresion -> exp GTHAN exp
Rule 64    expresion -> exp LTHAN exp
Rule 65    expresion -> exp EQLOP exp
Rule 66    expresion -> exp GEQUAL exp
Rule 67    expresion -> exp LEQUAL exp
Rule 68    expresion -> exp ABRACKET exp
Rule 69    exp -> termino
Rule 70    exp -> termino expb
Rule 71    expb -> PLUS exp
Rule 72    expb -> MINUS exp
Rule 73    termino -> factor
Rule 74    termino -> factor terminob
Rule 75    terminob -> TIMES exp
Rule 76    terminob -> DIVIDE exp
Rule 77    factor -> LPAREN expresion RPAREN
Rule 78    factor -> ID LPAREN expresion RPAREN
Rule 79    factor -> PLUS cte
Rule 80    factor -> MINUS cte
Rule 81    factor -> cte
Rule 82    factor -> ID asign
Rule 83    estatuto -> asignacion
Rule 84    estatuto -> funcionvoid
Rule 85    estatuto -> retorno
Rule 86    estatuto -> lee
Rule 87    estatuto -> escritura
Rule 88    estatuto -> decision
Rule 89    estatuto -> repeticioncond
Rule 90    estatuto -> repeticionnocond
Rule 91    estatuto -> expresion
Rule 92    empty -> <empty>

Terminals, with rules where they appear

ABRACKET             : 68
CHAR                 : 9 12
COLON                : 
COMMA                : 17 21 46 49 50
COMMENT              : 
CTEC                 : 37 60
CTEF                 : 59
CTEI                 : 36
CTES                 : 
DESDE                : 56
DIVIDE               : 76
ENTONCES             : 52
EQLOP                : 65
EQUAL                : 38 39 56
ESCRIBE              : 47 48
FLOAT                : 8 11
FUNCION              : 23 24
GEQUAL               : 66
GTHAN                : 63
HACER                : 56
HASTA                : 56
HAZ                  : 55
ID                   : 1 5 6 23 24 38 39 41 43 57 78 82
INT                  : 7 10
LBRACK               : 6 35 36 37
LBRACKET             : 31 32
LEE                  : 44
LEQUAL               : 67
LPAREN               : 4 23 24 42 43 44 47 48 52 55 77 78
LTHAN                : 64
MIENTRAS             : 55
MINUS                : 72 80
NUMBER               : 6 58
PLUS                 : 71 79
PRINCIPAL            : 4
PROGRAMA             : 1
RBRACK               : 6 35 36 37
RBRACKET             : 32 33
REGRESA              : 42
RPAREN               : 4 26 27 42 43 45 51 52 55 77 78
SEMICOL              : 1 18 40 41 42 43 45 51
SI                   : 52
SINO                 : 54
STRING               : 48 49 61
TIMES                : 75
VAR                  : 14
VOID                 : 13
error                : 

Nonterminals, with rules where they appear

asign                : 39 41 82
asignacion           : 83
asignacionb          : 38 39
bloque               : 4 28 29 53 54 54 55 56
bloqueb              : 31 34
cte                  : 79 80 81
decision             : 88
decisionb            : 52
empty                : 16 19 25 30
escritura            : 87
escriturab           : 47 48 49 50
estatuto             : 31 34
exp                  : 56 56 62 63 63 64 64 65 65 66 66 67 67 68 68 71 72 75 76
expb                 : 70
expresion            : 35 40 42 43 47 50 52 55 77 78 91
factor               : 73 74
funcion              : 2 28 29
funcionb             : 23 24
funcionc             : 26 27
funcionvoid          : 84
id                   : 17 18 21 22 44 46 56
lee                  : 86
leeb                 : 44 46
programa             : 0
programab            : 1
programac            : 2 3
repeticioncond       : 89
repeticionnocond     : 90
retorno              : 85
termino              : 69 70
terminob             : 74
tipofun              : 24
tipovar              : 15 20
vars                 : 2 28
varsb                : 14 18
varsc                : 15 17
varsfunc             : 27
varsfuncb            : 20 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOL programab

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOL programab

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOL programab

    SEMICOL         shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOL . programab
    (2) programab -> . vars funcion programac
    (3) programab -> . programac
    (14) vars -> . VAR varsb
    (4) programac -> . PRINCIPAL LPAREN RPAREN bloque

    VAR             shift and go to state 8
    PRINCIPAL       shift and go to state 9

    programab                      shift and go to state 5
    vars                           shift and go to state 6
    programac                      shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID SEMICOL programab .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOL programab .)


state 6

    (2) programab -> vars . funcion programac
    (23) funcion -> . FUNCION ID LPAREN funcionb
    (24) funcion -> . FUNCION tipofun ID LPAREN funcionb
    (25) funcion -> . empty
    (92) empty -> .

    FUNCION         shift and go to state 11
    PRINCIPAL       reduce using rule 92 (empty -> .)

    funcion                        shift and go to state 10
    empty                          shift and go to state 12

state 7

    (3) programab -> programac .

    $end            reduce using rule 3 (programab -> programac .)


state 8

    (14) vars -> VAR . varsb
    (15) varsb -> . tipovar varsc
    (16) varsb -> . empty
    (7) tipovar -> . INT
    (8) tipovar -> . FLOAT
    (9) tipovar -> . CHAR
    (92) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    FUNCION         reduce using rule 92 (empty -> .)
    PRINCIPAL       reduce using rule 92 (empty -> .)
    LBRACKET        reduce using rule 92 (empty -> .)

    varsb                          shift and go to state 13
    tipovar                        shift and go to state 14
    empty                          shift and go to state 15

state 9

    (4) programac -> PRINCIPAL . LPAREN RPAREN bloque

    LPAREN          shift and go to state 19


state 10

    (2) programab -> vars funcion . programac
    (4) programac -> . PRINCIPAL LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 9

    programac                      shift and go to state 20

state 11

    (23) funcion -> FUNCION . ID LPAREN funcionb
    (24) funcion -> FUNCION . tipofun ID LPAREN funcionb
    (10) tipofun -> . INT
    (11) tipofun -> . FLOAT
    (12) tipofun -> . CHAR
    (13) tipofun -> . VOID

    ID              shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25
    VOID            shift and go to state 26

    tipofun                        shift and go to state 22

state 12

    (25) funcion -> empty .

    PRINCIPAL       reduce using rule 25 (funcion -> empty .)


state 13

    (14) vars -> VAR varsb .

    FUNCION         reduce using rule 14 (vars -> VAR varsb .)
    PRINCIPAL       reduce using rule 14 (vars -> VAR varsb .)
    LBRACKET        reduce using rule 14 (vars -> VAR varsb .)


state 14

    (15) varsb -> tipovar . varsc
    (17) varsc -> . id COMMA varsc
    (18) varsc -> . id SEMICOL varsb
    (19) varsc -> . empty
    (5) id -> . ID
    (6) id -> . ID LBRACK NUMBER RBRACK
    (92) empty -> .

    ID              shift and go to state 30
    FUNCION         reduce using rule 92 (empty -> .)
    PRINCIPAL       reduce using rule 92 (empty -> .)
    LBRACKET        reduce using rule 92 (empty -> .)

    varsc                          shift and go to state 27
    id                             shift and go to state 28
    empty                          shift and go to state 29

state 15

    (16) varsb -> empty .

    FUNCION         reduce using rule 16 (varsb -> empty .)
    PRINCIPAL       reduce using rule 16 (varsb -> empty .)
    LBRACKET        reduce using rule 16 (varsb -> empty .)


state 16

    (7) tipovar -> INT .

    ID              reduce using rule 7 (tipovar -> INT .)
    FUNCION         reduce using rule 7 (tipovar -> INT .)
    PRINCIPAL       reduce using rule 7 (tipovar -> INT .)
    LBRACKET        reduce using rule 7 (tipovar -> INT .)


state 17

    (8) tipovar -> FLOAT .

    ID              reduce using rule 8 (tipovar -> FLOAT .)
    FUNCION         reduce using rule 8 (tipovar -> FLOAT .)
    PRINCIPAL       reduce using rule 8 (tipovar -> FLOAT .)
    LBRACKET        reduce using rule 8 (tipovar -> FLOAT .)


state 18

    (9) tipovar -> CHAR .

    ID              reduce using rule 9 (tipovar -> CHAR .)
    FUNCION         reduce using rule 9 (tipovar -> CHAR .)
    PRINCIPAL       reduce using rule 9 (tipovar -> CHAR .)
    LBRACKET        reduce using rule 9 (tipovar -> CHAR .)


state 19

    (4) programac -> PRINCIPAL LPAREN . RPAREN bloque

    RPAREN          shift and go to state 31


state 20

    (2) programab -> vars funcion programac .

    $end            reduce using rule 2 (programab -> vars funcion programac .)


state 21

    (23) funcion -> FUNCION ID . LPAREN funcionb

    LPAREN          shift and go to state 32


state 22

    (24) funcion -> FUNCION tipofun . ID LPAREN funcionb

    ID              shift and go to state 33


state 23

    (10) tipofun -> INT .

    ID              reduce using rule 10 (tipofun -> INT .)


state 24

    (11) tipofun -> FLOAT .

    ID              reduce using rule 11 (tipofun -> FLOAT .)


state 25

    (12) tipofun -> CHAR .

    ID              reduce using rule 12 (tipofun -> CHAR .)


state 26

    (13) tipofun -> VOID .

    ID              reduce using rule 13 (tipofun -> VOID .)


state 27

    (15) varsb -> tipovar varsc .

    FUNCION         reduce using rule 15 (varsb -> tipovar varsc .)
    PRINCIPAL       reduce using rule 15 (varsb -> tipovar varsc .)
    LBRACKET        reduce using rule 15 (varsb -> tipovar varsc .)


state 28

    (17) varsc -> id . COMMA varsc
    (18) varsc -> id . SEMICOL varsb

    COMMA           shift and go to state 34
    SEMICOL         shift and go to state 35


state 29

    (19) varsc -> empty .

    FUNCION         reduce using rule 19 (varsc -> empty .)
    PRINCIPAL       reduce using rule 19 (varsc -> empty .)
    LBRACKET        reduce using rule 19 (varsc -> empty .)


state 30

    (5) id -> ID .
    (6) id -> ID . LBRACK NUMBER RBRACK

    COMMA           reduce using rule 5 (id -> ID .)
    SEMICOL         reduce using rule 5 (id -> ID .)
    RPAREN          reduce using rule 5 (id -> ID .)
    EQUAL           reduce using rule 5 (id -> ID .)
    LBRACK          shift and go to state 36


state 31

    (4) programac -> PRINCIPAL LPAREN RPAREN . bloque
    (31) bloque -> . LBRACKET estatuto bloqueb
    (32) bloque -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 38

    bloque                         shift and go to state 37

state 32

    (23) funcion -> FUNCION ID LPAREN . funcionb
    (26) funcionb -> . RPAREN funcionc
    (27) funcionb -> . varsfunc RPAREN funcionc
    (20) varsfunc -> . tipovar varsfuncb
    (7) tipovar -> . INT
    (8) tipovar -> . FLOAT
    (9) tipovar -> . CHAR

    RPAREN          shift and go to state 40
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    funcionb                       shift and go to state 39
    varsfunc                       shift and go to state 41
    tipovar                        shift and go to state 42

state 33

    (24) funcion -> FUNCION tipofun ID . LPAREN funcionb

    LPAREN          shift and go to state 43


state 34

    (17) varsc -> id COMMA . varsc
    (17) varsc -> . id COMMA varsc
    (18) varsc -> . id SEMICOL varsb
    (19) varsc -> . empty
    (5) id -> . ID
    (6) id -> . ID LBRACK NUMBER RBRACK
    (92) empty -> .

    ID              shift and go to state 30
    FUNCION         reduce using rule 92 (empty -> .)
    PRINCIPAL       reduce using rule 92 (empty -> .)
    LBRACKET        reduce using rule 92 (empty -> .)

    id                             shift and go to state 28
    varsc                          shift and go to state 44
    empty                          shift and go to state 29

state 35

    (18) varsc -> id SEMICOL . varsb
    (15) varsb -> . tipovar varsc
    (16) varsb -> . empty
    (7) tipovar -> . INT
    (8) tipovar -> . FLOAT
    (9) tipovar -> . CHAR
    (92) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    FUNCION         reduce using rule 92 (empty -> .)
    PRINCIPAL       reduce using rule 92 (empty -> .)
    LBRACKET        reduce using rule 92 (empty -> .)

    varsb                          shift and go to state 45
    tipovar                        shift and go to state 14
    empty                          shift and go to state 15

state 36

    (6) id -> ID LBRACK . NUMBER RBRACK

    NUMBER          shift and go to state 46


state 37

    (4) programac -> PRINCIPAL LPAREN RPAREN bloque .

    $end            reduce using rule 4 (programac -> PRINCIPAL LPAREN RPAREN bloque .)


state 38

    (31) bloque -> LBRACKET . estatuto bloqueb
    (32) bloque -> LBRACKET . RBRACKET
    (83) estatuto -> . asignacion
    (84) estatuto -> . funcionvoid
    (85) estatuto -> . retorno
    (86) estatuto -> . lee
    (87) estatuto -> . escritura
    (88) estatuto -> . decision
    (89) estatuto -> . repeticioncond
    (90) estatuto -> . repeticionnocond
    (91) estatuto -> . expresion
    (38) asignacion -> . ID EQUAL asignacionb
    (39) asignacion -> . ID asign EQUAL asignacionb
    (43) funcionvoid -> . ID LPAREN expresion RPAREN SEMICOL
    (42) retorno -> . REGRESA LPAREN expresion RPAREN SEMICOL
    (44) lee -> . LEE LPAREN id leeb
    (47) escritura -> . ESCRIBE LPAREN expresion escriturab
    (48) escritura -> . ESCRIBE LPAREN STRING escriturab
    (52) decision -> . SI LPAREN expresion RPAREN ENTONCES decisionb
    (55) repeticioncond -> . MIENTRAS LPAREN expresion RPAREN HAZ bloque
    (56) repeticionnocond -> . DESDE id EQUAL exp HASTA exp HACER bloque
    (62) expresion -> . exp
    (63) expresion -> . exp GTHAN exp
    (64) expresion -> . exp LTHAN exp
    (65) expresion -> . exp EQLOP exp
    (66) expresion -> . exp GEQUAL exp
    (67) expresion -> . exp LEQUAL exp
    (68) expresion -> . exp ABRACKET exp
    (69) exp -> . termino
    (70) exp -> . termino expb
    (73) termino -> . factor
    (74) termino -> . factor terminob
    (77) factor -> . LPAREN expresion RPAREN
    (78) factor -> . ID LPAREN expresion RPAREN
    (79) factor -> . PLUS cte
    (80) factor -> . MINUS cte
    (81) factor -> . cte
    (82) factor -> . ID asign
    (57) cte -> . ID
    (58) cte -> . NUMBER
    (59) cte -> . CTEF
    (60) cte -> . CTEC
    (61) cte -> . STRING

    RBRACKET        shift and go to state 48
    ID              shift and go to state 58
    REGRESA         shift and go to state 60
    LEE             shift and go to state 61
    ESCRIBE         shift and go to state 62
    SI              shift and go to state 64
    MIENTRAS        shift and go to state 65
    DESDE           shift and go to state 66
    LPAREN          shift and go to state 59
    PLUS            shift and go to state 70
    MINUS           shift and go to state 72
    NUMBER          shift and go to state 73
    CTEF            shift and go to state 74
    CTEC            shift and go to state 75
    STRING          shift and go to state 63

    estatuto                       shift and go to state 47
    asignacion                     shift and go to state 49
    funcionvoid                    shift and go to state 50
    retorno                        shift and go to state 51
    lee                            shift and go to state 52
    escritura                      shift and go to state 53
    decision                       shift and go to state 54
    repeticioncond                 shift and go to state 55
    repeticionnocond               shift and go to state 56
    expresion                      shift and go to state 57
    exp                            shift and go to state 67
    termino                        shift and go to state 68
    factor                         shift and go to state 69
    cte                            shift and go to state 71

state 39

    (23) funcion -> FUNCION ID LPAREN funcionb .

    PRINCIPAL       reduce using rule 23 (funcion -> FUNCION ID LPAREN funcionb .)


state 40

    (26) funcionb -> RPAREN . funcionc
    (28) funcionc -> . vars bloque funcion
    (29) funcionc -> . bloque funcion
    (30) funcionc -> . empty
    (14) vars -> . VAR varsb
    (31) bloque -> . LBRACKET estatuto bloqueb
    (32) bloque -> . LBRACKET RBRACKET
    (92) empty -> .

    VAR             shift and go to state 8
    LBRACKET        shift and go to state 38
    PRINCIPAL       reduce using rule 92 (empty -> .)

    funcionc                       shift and go to state 76
    vars                           shift and go to state 77
    bloque                         shift and go to state 78
    empty                          shift and go to state 79

state 41

    (27) funcionb -> varsfunc . RPAREN funcionc

    RPAREN          shift and go to state 80


state 42

    (20) varsfunc -> tipovar . varsfuncb
    (21) varsfuncb -> . id COMMA varsfuncb
    (22) varsfuncb -> . id
    (5) id -> . ID
    (6) id -> . ID LBRACK NUMBER RBRACK

    ID              shift and go to state 30

    varsfuncb                      shift and go to state 81
    id                             shift and go to state 82

state 43

    (24) funcion -> FUNCION tipofun ID LPAREN . funcionb
    (26) funcionb -> . RPAREN funcionc
    (27) funcionb -> . varsfunc RPAREN funcionc
    (20) varsfunc -> . tipovar varsfuncb
    (7) tipovar -> . INT
    (8) tipovar -> . FLOAT
    (9) tipovar -> . CHAR

    RPAREN          shift and go to state 40
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    funcionb                       shift and go to state 83
    varsfunc                       shift and go to state 41
    tipovar                        shift and go to state 42

state 44

    (17) varsc -> id COMMA varsc .

    FUNCION         reduce using rule 17 (varsc -> id COMMA varsc .)
    PRINCIPAL       reduce using rule 17 (varsc -> id COMMA varsc .)
    LBRACKET        reduce using rule 17 (varsc -> id COMMA varsc .)


state 45

    (18) varsc -> id SEMICOL varsb .

    FUNCION         reduce using rule 18 (varsc -> id SEMICOL varsb .)
    PRINCIPAL       reduce using rule 18 (varsc -> id SEMICOL varsb .)
    LBRACKET        reduce using rule 18 (varsc -> id SEMICOL varsb .)


state 46

    (6) id -> ID LBRACK NUMBER . RBRACK

    RBRACK          shift and go to state 84


state 47

    (31) bloque -> LBRACKET estatuto . bloqueb
    (33) bloqueb -> . RBRACKET
    (34) bloqueb -> . estatuto bloqueb
    (83) estatuto -> . asignacion
    (84) estatuto -> . funcionvoid
    (85) estatuto -> . retorno
    (86) estatuto -> . lee
    (87) estatuto -> . escritura
    (88) estatuto -> . decision
    (89) estatuto -> . repeticioncond
    (90) estatuto -> . repeticionnocond
    (91) estatuto -> . expresion
    (38) asignacion -> . ID EQUAL asignacionb
    (39) asignacion -> . ID asign EQUAL asignacionb
    (43) funcionvoid -> . ID LPAREN expresion RPAREN SEMICOL
    (42) retorno -> . REGRESA LPAREN expresion RPAREN SEMICOL
    (44) lee -> . LEE LPAREN id leeb
    (47) escritura -> . ESCRIBE LPAREN expresion escriturab
    (48) escritura -> . ESCRIBE LPAREN STRING escriturab
    (52) decision -> . SI LPAREN expresion RPAREN ENTONCES decisionb
    (55) repeticioncond -> . MIENTRAS LPAREN expresion RPAREN HAZ bloque
    (56) repeticionnocond -> . DESDE id EQUAL exp HASTA exp HACER bloque
    (62) expresion -> . exp
    (63) expresion -> . exp GTHAN exp
    (64) expresion -> . exp LTHAN exp
    (65) expresion -> . exp EQLOP exp
    (66) expresion -> . exp GEQUAL exp
    (67) expresion -> . exp LEQUAL exp
    (68) expresion -> . exp ABRACKET exp
    (69) exp -> . termino
    (70) exp -> . termino expb
    (73) termino -> . factor
    (74) termino -> . factor terminob
    (77) factor -> . LPAREN expresion RPAREN
    (78) factor -> . ID LPAREN expresion RPAREN
    (79) factor -> . PLUS cte
    (80) factor -> . MINUS cte
    (81) factor -> . cte
    (82) factor -> . ID asign
    (57) cte -> . ID
    (58) cte -> . NUMBER
    (59) cte -> . CTEF
    (60) cte -> . CTEC
    (61) cte -> . STRING

    RBRACKET        shift and go to state 87
    ID              shift and go to state 58
    REGRESA         shift and go to state 60
    LEE             shift and go to state 61
    ESCRIBE         shift and go to state 62
    SI              shift and go to state 64
    MIENTRAS        shift and go to state 65
    DESDE           shift and go to state 66
    LPAREN          shift and go to state 59
    PLUS            shift and go to state 70
    MINUS           shift and go to state 72
    NUMBER          shift and go to state 73
    CTEF            shift and go to state 74
    CTEC            shift and go to state 75
    STRING          shift and go to state 63

    estatuto                       shift and go to state 85
    bloqueb                        shift and go to state 86
    asignacion                     shift and go to state 49
    funcionvoid                    shift and go to state 50
    retorno                        shift and go to state 51
    lee                            shift and go to state 52
    escritura                      shift and go to state 53
    decision                       shift and go to state 54
    repeticioncond                 shift and go to state 55
    repeticionnocond               shift and go to state 56
    expresion                      shift and go to state 57
    exp                            shift and go to state 67
    termino                        shift and go to state 68
    factor                         shift and go to state 69
    cte                            shift and go to state 71

state 48

    (32) bloque -> LBRACKET RBRACKET .

    $end            reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    FUNCION         reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    PRINCIPAL       reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    SINO            reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    ID              reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
    REGRESA         reduce using rule 32 (bloque -> LBRACKET RBRACKET .)
